# Astrograph

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
apps/astrograph-ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/astrograph-ui/e2e/: app.spec.ts
apps/astrograph-ui/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts  validation.ts
apps/astrograph-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/astrograph-ui/src-tauri/capabilities/: default.json
apps/astrograph-ui/src-tauri/src/: lib.rs  main.rs
apps/astrograph-ui/src/components/: BookmarksPanel.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  FileTree.tsx  GraphControls.tsx  GraphView.tsx  KeyboardShortcuts.tsx  ProgressBar.tsx  Sidebar.tsx  SourcePreview.tsx  ThemeToggle.tsx
apps/astrograph-ui/src/hooks/: useKeyboardShortcuts.ts
apps/astrograph-ui/src/state/: store.test.ts  store.ts
apps/astrograph-ui/src/utils/: exportGraph.ts
crates/astrograph-cli/: Cargo.toml
crates/astrograph-cli/src/: main.rs
crates/astrograph-engine/: Cargo.toml
crates/astrograph-engine/src/: analysis.rs  cache.rs  language.rs  lib.rs  model.rs  parser.rs
crates/astrograph-engine/tests/: edge_cases.rs  ignore_rules.rs
docs/: product.md  schema.md
examples/: sample-output.json
examples/sample-project/: main.ts
