[package]
name = "astrograph-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Astrograph static analysis engine."

[dependencies]
anyhow = "1.0"
hex = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tree-sitter = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
walkdir = "2.5"
