[package]
name = "astrograph-ui"
version = "0.1.0"
description = "Astrograph desktop shell"
authors = ["Astrograph Contributors"]
license = "MIT"
repository = "https://github.com/hashsoft7/Astrograph"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "astrograph_ui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
anyhow = "1.0"
astrograph-engine = { path = "../../../crates/astrograph-engine" }
